--- a/app/src/main/res/layout/fragment_ttht_chitiet_treo.xml
+++ b/app/src/main/res/layout/fragment_ttht_chitiet_treo.xml
@@ -675,7 +675,7 @@
                     android:layout_height="match_parent"
                     android:layout_marginBottom="@dimen/_5sdp"
                     android:layout_marginTop="@dimen/_5sdp"
-                    tools:visibility="gone">
+                    tools:visibility="visible">
 
                     <TextView
                         android:id="@+id/tv_lydo"
@@ -685,6 +685,29 @@
                         android:text="Lý do treo tháo" />
 
                     <RelativeLayout
+                        android:layout_below="@+id/tv_lydo"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content">
+                        <ImageButton
+                            android:background="@color/text_white"
+                            android:src="@drawable/ic_arrow_down"
+                            android:id="@+id/iv_sp_lydo"
+                            android:layout_alignParentRight="true"
+                            android:layout_width="@dimen/_25sdp"
+                            android:layout_height="@dimen/_22sdp" />
+
+                        <AutoCompleteTextView
+                            android:layout_toLeftOf="@+id/iv_sp_lydo"
+                            android:id="@+id/autoet_lydo"
+                            style="@style/edittextStyle21"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            tools:text="abcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabc" />
+
+
+                    </RelativeLayout>
+
+                  <!--  <RelativeLayout
                         android:layout_width="match_parent"
                         android:layout_height="@dimen/_24sdp"
                         android:layout_alignParentBottom="true"
@@ -715,7 +738,7 @@
                             android:background="@color/tththn_text_less_black"
                             android:minHeight="@dimen/_24sdp" />
 
-                        <Spinner
+                        <AutoCompleteTextView
                             android:id="@+id/sp_lydo"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
@@ -727,7 +750,7 @@
                             android:gravity="center"
                             android:minHeight="@dimen/_24sdp"
                             android:spinnerMode="dropdown" />
-                    </RelativeLayout>
+                    </RelativeLayout>-->
 
 
                 </RelativeLayout>
