--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -186,6 +186,15 @@
         <item name="android:paddingBottom">@dimen/_5sdp</item>
     </style>
 
+    <style name="edittextStyle21" parent="@style/edittextStyle2">
+        <item name="android:maxLines">1</item>
+        <item name="android:lines">1</item>
+        <item name="android:singleLine">true</item>
+        <item name="android:scrollbars">horizontal</item>
+        <item name="android:scrollHorizontally">true</item>
+        <item name="android:gravity">center_vertical</item>
+    </style>
+
     <style name="edittextStyle3" parent="@style/edittextStyle2">
         <item name="android:textSize">@dimen/_10sdp</item>
         <item name="android:textColor">@color/tththn_button</item>
