--- a/app/src/main/res/layout/fragment_ttht_hn_bban_tuti.xml
+++ b/app/src/main/res/layout/fragment_ttht_hn_bban_tuti.xml
@@ -215,7 +215,7 @@
                         android:text="TU TI Tháo" />
 
                     <Button
-                        android:id="@+id/bt_add_tuti_thao"
+                        android:id="@+id/bt_add_tuti_E"
                         style="@style/buttonStyle1"
                         android:layout_width="wrap_content"
                         android:layout_height="@dimen/_24sdp"
@@ -230,7 +230,7 @@
                         android:layout_centerVertical="true"
                         android:layout_marginLeft="@dimen/_5sdp"
                         android:layout_marginRight="@dimen/_2sdp"
-                        android:layout_toLeftOf="@+id/bt_add_tuti_thao"
+                        android:layout_toLeftOf="@+id/bt_add_tuti_E"
                         android:layout_toRightOf="@+id/tv_7"
                         android:background="@color/tththn_text_more_less_black" />
                 </RelativeLayout>
@@ -249,6 +249,56 @@
                     android:layout_height="wrap_content" />
                <!-- <include tools:layout="@layout/ttht_include_tuti" />-->
 
+
+
+                <RelativeLayout
+                    android:id="@+id/rl_7B"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="@dimen/_5sdp"
+                    android:layout_marginTop="@dimen/_10sdp"
+                    tools:visibility="gone">
+
+                    <TextView
+                        android:id="@+id/tv_7B"
+                        style="@style/textStyle3"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="TU TI Tháo" />
+
+                    <Button
+                        android:id="@+id/bt_add_tuti_B"
+                        style="@style/buttonStyle1"
+                        android:layout_width="wrap_content"
+                        android:layout_height="@dimen/_24sdp"
+                        android:layout_alignParentRight="true"
+                        android:drawableRight="@drawable/ic_add"
+                        android:text="Thêm TU TI Tháo" />
+
+                    <View
+                        android:id="@+id/v_1aB"
+                        android:layout_width="match_parent"
+                        android:layout_height="1dp"
+                        android:layout_centerVertical="true"
+                        android:layout_marginLeft="@dimen/_5sdp"
+                        android:layout_marginRight="@dimen/_2sdp"
+                        android:layout_toLeftOf="@+id/bt_add_tuti_B"
+                        android:layout_toRightOf="@+id/tv_7B"
+                        android:background="@color/tththn_text_more_less_black" />
+                </RelativeLayout>
+
+                <LinearLayout
+                    android:orientation="vertical"
+                    android:id="@+id/include_tutiB"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                </LinearLayout>
+
+                <View
+                    android:id="@+id/v_mark_tutiB"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
 
                 <LinearLayout
                     android:visibility="gone"
